--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "@heroicons/react": "^1.0.6",
         "autoprefixer": "^10.4.3",
         "axios": "^0.26.1",
+        "bcrypt-nodejs": "^0.0.3",
+        "dotenv": "^16.0.0",
         "js-cookie": "^3.0.1",
+        "jsonwebtoken": "^8.5.1",
         "next": "12.1.0",
+        "nodemailer": "^6.7.3",
         "postcss": "^8.4.11",
         "react": "17.0.2",
         "react-dom": "17.0.2",
