--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
         "@heroicons/react": "^1.0.6",
         "autoprefixer": "^10.4.3",
         "axios": "^0.26.1",
+        "body-parser": "^1.20.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.18.1",
         "js-cookie": "^3.0.1",
         "next": "12.1.0",
+        "nodemailer": "^6.7.5",
         "postcss": "^8.4.11",
         "react": "17.0.2",
         "react-dom": "17.0.2",
