--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@headlessui/react": "^1.5.0",
         "@heroicons/react": "^1.0.6",
+        "@vercel/node": "^1.15.1",
         "autoprefixer": "^10.4.3",
         "axios": "^0.26.1",
         "body-parser": "^1.20.0",
