--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "js-cookie": "^3.0.1",
         "next": "12.1.0",
         "nodemailer": "^6.7.5",
+        "nodemailer-smtp-transport": "^2.7.4",
         "postcss": "^8.4.11",
         "react": "17.0.2",
         "react-dom": "17.0.2",
