--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.18.1",
         "js-cookie": "^3.0.1",
         "next": "12.1.0",
+        "next-seo": "^5.4.0",
         "nodemailer": "^6.7.5",
         "nodemailer-smtp-transport": "^2.7.4",
         "postcss": "^8.4.11",
