--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "postcss": "^8.4.11",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-icons": "^4.4.0",
         "tailwindcss": "^3.0.23"
     },
     "devDependencies": {
