--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
         "js-cookie": "^3.0.1",
-        "next": "12.1.0",
+        "next": "^12.3.0",
         "next-seo": "^5.4.0",
         "nodemailer": "^6.7.5",
-        "nodemailer-smtp-transport": "^2.7.4",
+        "nodemailer-smtp-transport": "^2.4.2",
         "postcss": "^8.4.11",
         "react": "17.0.2",
         "react-dom": "17.0.2",
