--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "firebase": "^9.14.0",
         "js-cookie": "^3.0.1",
         "next": "^12.3.0",
         "next-seo": "^5.4.0",
