--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "postcss": "^8.4.11",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-firebase-hooks": "^5.1.1",
         "react-icons": "^4.4.0",
         "tailwindcss": "^3.0.23"
     },
