--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "autoprefixer": "^10.4.3",
         "axios": "^0.26.1",
         "body-parser": "^1.20.0",
+        "compressorjs": "^1.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
