--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express": "^4.18.1",
         "firebase": "^9.14.0",
         "js-cookie": "^3.0.1",
+        "jsonpath": "^1.1.1",
         "next": "^12.3.0",
         "next-seo": "^5.4.0",
         "nodemailer": "^6.7.5",
