--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-dom": "17.0.2",
         "react-firebase-hooks": "^5.1.1",
         "react-icons": "^4.4.0",
+        "swiper": "^8.4.5",
         "tailwindcss": "^3.0.23"
     },
     "devDependencies": {
