--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "firebase": "^9.14.0",
         "js-cookie": "^3.0.1",
         "jsonpath": "^1.1.1",
+        "lightgallery": "^2.7.0",
         "next": "^12.3.0",
         "next-seo": "^5.4.0",
         "nodemailer": "^6.7.5",
