--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-dom": "17.0.2",
         "react-firebase-hooks": "^5.1.1",
         "react-icons": "^4.4.0",
+        "react-slider-swiper": "^2.0.6",
         "swiper": "^8.4.5",
         "tailwindcss": "^3.0.23"
     },
