--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
         "nodemailer": "^6.7.5",
         "nodemailer-smtp-transport": "^2.4.2",
         "postcss": "^8.4.11",
+        
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-firebase-hooks": "^5.1.1",
         "react-icons": "^4.4.0",
-        "react-slider-swiper": "^2.0.6",
-        "swiper": "^8.4.5",
-        "tailwindcss": "^3.0.23"
+        
+        "swiper": "^8.4.5"
     },
     "devDependencies": {
         "eslint": "8.11.0",
-        "eslint-config-next": "12.1.0",
+        "eslint-config-next": "^12.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
