--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-dom": "17.0.2",
         "react-firebase-hooks": "^5.1.1",
         "react-icons": "^4.4.0",
+        "react-transition-group": "^4.4.5",
         "swiper": "^8.4.5"
     },
     "devDependencies": {
