--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "swiper": "^8.4.5"
     },
     "devDependencies": {
-        "eslint": "8.11.0",
+        "eslint": "^7.32.0",
         "eslint-config-next": "^12.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
