--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
         "nodemailer": "^6.7.5",
         "nodemailer-smtp-transport": "^2.4.2",
         "postcss": "^8.4.11",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-firebase-hooks": "^5.1.1",
         "react-icons": "^4.4.0",
         "react-transition-group": "^4.4.5",
+        "sonner": "^0.7.4",
         "swiper": "^8.4.5"
     },
     "devDependencies": {
